[gd_scene load_steps=8 format=3 uid="uid://dwhejqu03vl0b"]

[ext_resource type="SpriteFrames" uid="uid://tehrf3qb1t4c" path="res://src/dino/enemies/soldiers/SoldierSpriteFrames.tres" id="1_cvejl"]
[ext_resource type="Script" path="res://src/dino/sidescroller/enemy/SSEnemy.gd" id="1_kjpbg"]
[ext_resource type="PackedScene" uid="uid://43qn8g87wt2p" path="res://src/dino/sidescroller/enemy/SSEnemyMachine.tscn" id="3_22wf2"]
[ext_resource type="Texture2D" uid="uid://dmx8juk2455h4" path="res://addons/core/assets/lights/light64px1.png" id="4_f6c4x"]
[ext_resource type="FontFile" uid="uid://b1c3fty8httvk" path="res://addons/core/assets/fonts/at01.ttf" id="5_dl1df"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cd88"]
size = Vector2(12, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2i04"]
size = Vector2(18, 16)

[node name="Soldier" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_kjpbg")
speed = 50.0
jump_velocity = -300.0
knockback_velocity = -300.0
knockback_velocity_horizontal = 20.0
dying_velocity = -400.0
initial_health = 3
should_see_player = true
can_kick = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5cd88")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = ExtResource("1_cvejl")
animation = &"knocked_back"
autoplay = "idle"
flip_h = true

[node name="SSEnemyMachine" parent="." instance=ExtResource("3_22wf2")]

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(7, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_h2i04")
metadata/_edit_lock_ = true

[node name="FrontRay" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, 12)

[node name="LowLineOfSight" type="RayCast2D" parent="."]
position = Vector2(0, 8)
rotation = 1.57079
target_position = Vector2(0, 40)
collision_mask = 2

[node name="HighLineOfSight" type="RayCast2D" parent="."]
position = Vector2(0, -4)
rotation = 1.57079
target_position = Vector2(0, 40)
collision_mask = 2

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
texture = ExtResource("4_f6c4x")

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("5_dl1df")
text = "state"
horizontal_alignment = 1
